--- a/index.html
+++ b/index.html
@@ -9,14 +9,27 @@
       type="text/javascript"
       src="https://public.tableau.com/javascripts/api/tableau-2.min.js"
     ></script>
+    <!--Add in styling as last step-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+      integrity="sha256-2YQRJMXD7pIAPHiXr0s+vlRWA7GYJEK0ARns7k2sbHY="
+      crossorigin="anonymous"
+    />
   </head>
+
   <body>
     <h1>Anything 😒</h1>
     <div>
       <button id="exportPDF">Export PDF</button>
       <button id="exportPPT">Export PPT</button>
     </div>
-    <script src="./app.js"></script>
+    <h2>filters</h2>
+    <input type="number" placeholder="Min Value" id="minValue" />
+    <input type="number" placeholder="Max Value" id="maxValue" />
+    <button id="filterButton">Filter!</button>
+
     <div id="vizContainer"></div>
+    <script src="./app.js"></script>
   </body>
 </html>
