--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <body>
     <h1>Anything 😒</h1>
     <div>
+      <button id="showViz">Show Viz</button>
+      <button id="hideViz">Hide Viz</button>
       <button id="exportPDF">Export PDF</button>
       <button id="exportPPT">Export PPT</button>
     </div>
